# auto-prog

./: .clasp.json  .gitignore  README.md  __init__.py  pyproject.toml
.github/: copy_document_report.yaml  dependabot.yaml
.github/workflows/: bold-portal-site-login.yaml  copy_document_report.yaml  copy_spreadsheet_mokuhyoukanri_report.yaml  copy_spreadsheet_report.yaml  dependabot-auto-merge.yml  deploy-gas.yaml  notif-mg-gunpla-info.yaml
google_auto/: config.json  google_api_client.py
google_auto/gas/: Code.gs  ConvertDocsToWord.gs  ConvertSheetsToExcel.gs  CopyDocumentReport.gs  CopyMokuhyoukanriReport.gs  CopySpreadsheetReport.gs  README.md  Setup.gs  SyncObsidianSS.gs  SyncObsidianToGD.gs  copy_document_report.gs  copy_spreadsheet_mokuhyoukanri_report.gs
google_auto/gas/objective_sync/: objective_sync.gs
google_auto/google_document/: copy_document_report.py  refactored_copy_document_report.py
google_auto/google_spreadsheet/: copy_spreadsheet_mokuhyoukanri_report.py  copy_spreadsheet_report.py  refactored_copy_spreadsheet_mokuhyoukanri_report.py  refactored_copy_spreadsheet_report.py
google_spreadsheet/: copy_document_report.py  spreadsheet_copy.py  spreadsheet_report_copy.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py
gunpla/: notif-mg-gunpla-info.py
mail/: submit_monthly_coachmtg_mail.py  submit_monthly_report_mail.py
playwright/: .gitignore  package-lock.json  package.json
playwright/playwright-test/: site-login.js  test-youtube.js
test/: practice.py  test.py  test.txt  test2.py  test2.txt
(+3 files in other folders)
