[project]
name = "practice"
version = "0.1.0"
description = ""
authors = [
    {name = "yk2906", email = "yk050696@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3,<3.0.0",
    "gspread>=6.1.4,<7.0.0",
    "oauth2client>=4.1.3,<5.0.0",
    "google-api-python-client>=2.158.0,<3.0.0",
    "google>=3.0.0,<4.0.0",
    "google-auth>=2.37.0,<3.0.0",
    "google-auth-oauthlib>=1.2.1,<2.0.0",
    "google-auth-httplib2>=0.2.0,<0.3.0",
    "beautifulsoup4>=4.13.3,<5.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
